Comentar codigo y cambiar navbar de unas ventanas

--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -19,7 +19,7 @@
 
     <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-5">
-        <nav id="navbar"></nav>
+        <nav id="navbar_perfil"></nav>
         <div class="container">
             <div class="row mt-4 d-flex align-items-center">
                 <div class="col-auto">
