--- a/system_huellitas/views/public/historial_compras.html
+++ b/system_huellitas/views/public/historial_compras.html
@@ -2,9 +2,10 @@
 <html lang="es">
 
 <head>
+    <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historial_de_compra</title>
+    <title>Historial de compra</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -17,19 +18,24 @@
 
 <body>
     <header>
-        <nav id="navbar"></nav>
+        <!-- Encabezado de la página -->
+        <nav id="navbar_perfil"></nav><!-- Aquí se incluirá el menú -->
     </header>
 
     <main>
+        <!-- Sección principal de la página -->
         <div class="container-fluid pt-5">
             <br>
+            <!-- Título de la sección de historial de compras -->
             <div class="p-5">
                 <h3><b>Historial de compras</b></h3>
                 <h6>Mis Compras</h6>
             </div>
 
-
+            <!-- Contenedor principal del historial de compras -->
             <div class="container shadow p-4 mt-4 rounded-4 contenedor_historial">
+                <!-- Entradas de historial de compras -->
+                <!-- Entrada de historial de compra 1 -->
                 <h5>
                     <b>13 de enero, 2024</b>
                 </h5>
@@ -57,6 +63,7 @@
                     </div>
                 </div>
                 <hr>
+                <!-- Entrada de historial de compra 2 -->
                 <div class="row py-3">
                     <div class="col-1 py-2">
                         <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
@@ -81,6 +88,7 @@
                     </div>
                 </div>
                 <hr>
+                <!-- Entrada de historial de compra 3 -->
                 <div class="row py-3">
                     <div class="col-1 py-2">
                         <img class="image-fluid" src="../../resources/img/png/historial_compra_img.png" alt="">
@@ -104,6 +112,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Entrada de historial de compra 4 -->
                 <hr class="py-3">
                 <h5>
                     <b>15 de enero, 2024</b>
@@ -137,6 +146,7 @@
         </div>
     </main>
 
+    <!-- Espacio adicional en la parte inferior de la página -->
     <div class="mt-5 p-5">
 
     </div>
