--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas Pets sitio público</title>
@@ -16,15 +17,18 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header>
-        <nav id="navbar"></nav>
+        <nav id="navbar"></nav><!-- Aquí se incluirá el menú -->
     </header>
 
     <main>
         <div class="mt-5 p-5">
+            <!-- Contenedor principal del formulario de inicio de sesión -->
             <div class="container shadow p-4 mt-4 col-md-5 rounded-4">
                 <!-- Formulario -->
                 <form action="" id="login_cliente">
+                    <!-- Título y mensaje introductorio -->
                     <div class="row mt-4">
                         <div class="text-center">
                             <h1 class="fw-bold text-center">Inicia sesión</h1>
@@ -51,13 +55,13 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Boton y texto -->
+                        <!-- Columna para el botón de inicio de sesión y el enlace de registro -->
                         <div class="text-center mt-5">
-                            <a class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white"
-                                href="index.html">Iniciar sesión</a>
+                            <!-- Columna para el botón de inicio de sesión y el enlace de registro -->
+                            <a class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white" href="index.html">Iniciar sesión</a>
+                            <!-- Enlace para registrarse -->
                             <div>
-                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold"
-                                    href="../public/registro.html"> Registrate</a>
+                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold" href="../public/registro.html"> Registrate</a>
                             </div>
                         </div>
                     </div>
