--- a/system_huellitas/views/public/carrito_3.html
+++ b/system_huellitas/views/public/carrito_3.html
@@ -19,7 +19,7 @@
 
     <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-4">
-        <nav id="navbar"></nav>
+        <nav id="navbar_perfil"></nav>
     </header>
 
     <main>
