--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
@@ -16,24 +17,29 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header>
-        <nav id="navbar"></nav>
+        <nav id="navbar_perfil"></nav><!-- Aquí se incluirá el menú -->
     </header>
 
     <main>
+        <!-- Sección principal de la página -->
         <div class="container-fluid pt-5">
             <br>
+            <!-- Título de la página -->
             <h5 class="p-5">
                 <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
             </h5>
+            <!-- Contenedor principal -->
             <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
                 <div class="row">
+                    <!-- Columna izquierda: Imagen de perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
-                        <form action="perfil_editar_imagen">
+                        <form action="perfil_editar_imagen" id="perfil_cliente_vista">
                             <img src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
                             <br>
                             <br>
-
+                            <!-- Botón para cargar imagen -->
                             <div class="d-grid gap-2">
                                 <!-- Botón para cargar imagen -->
                                 <input type="file" class="form-control" id="upload_picture_profile" hidden>
@@ -43,7 +49,7 @@
                             </div>
                         </form>
                     </div>
-
+                    <!-- Columna derecha: Información del perfil -->
                     <div class="col-lg-7 col-md-5 col-sm-8 p-5">
                         <h5><b>Nombre</b></h5>
                         <p class="text-grey">Juan Velasquez</p>
@@ -78,7 +84,7 @@
         </div>
     </main>
 
-
+    <!-- Espacio adicional en la parte inferior de la página -->
     <div class="mt-5 p-5">
 
     </div>
