--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -2,9 +2,10 @@
 <html lang="es">
 
 <head>
+    <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil_editar</title>
+    <title>Perfil editar</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -16,18 +17,23 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header>
-        <nav id="navbar"></nav>
+        <nav id="navbar_perfil"></nav>
     </header>
 
     <main>
+        <!-- Sección principal de la página -->
         <div class="container-fluid pt-5">
             <br>
+            <!-- Título de la página -->
             <h5 class="p-5">
                 <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
             </h5>
+            <!-- Contenedor principal -->
             <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
                 <div class="row">
+                    <!-- Columna izquierda: Formulario para editar la información del perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
                         <form action="" id="perfil_editar_datos">
                             <img src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
@@ -41,7 +47,7 @@
                                     imagen</label>
                             </div>
                     </div>
-
+                    <!-- Columna derecha: Campos para editar la información del perfil -->
                     <div class="col-lg-7 col-md-5 col-sm-8 p-5">
                         <div class="row">
                             <div class="col-12 col-md-6">
@@ -100,6 +106,7 @@
         </div>
     </main>
 
+    <!-- Espacio adicional en la parte inferior de la página -->
     <div class="mt-5 p-5">
 
     </div>
