Animaciones en productos

--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -55,7 +55,7 @@
                             <p class="fs-5 fw-semibold mb-2">Descripción</p>
                             <p class="fs-6">Bolsa de comida de 6 libras, pedigree nutre el corazón y el cerebro de
                                 nuestros preciosos, para que lo alimentes como se lo merece.</p>
-                            <div class="bg-orange-color text-light col-12 col-md-2 text-center rounded-3 p-1">
+                            <div class="bg-orange-color text-light col-12 col-md-3 text-center rounded-3 p-1">
                                 Alimentación</div>
                         </div>
                         <!--Aqui estan los divs para ajustar el contenido y que siempre permanezaca con 7 espacios a la derecha en lg-->
@@ -89,10 +89,9 @@
                         <div class="col-sm-12 col-md-8 col-lg-12 mt-3">
                             <div class="row align-items-center">
                                 <!-- Agrega la clase align-items-center para alinear verticalmente -->
-                                <div class="col-1 text-end d-none d-sm-block">
+                                <div class="col-1 text-end d-none d-sm-block d-md-block">
                                     <!-- Utiliza las clases d-none y d-sm-block para ocultar la imagen en pantallas pequeñas -->
                                     <img src="../../resources/img/png/icono_codigo.png" class="img-fluid">
-                                    <!-- Ajusta el tamaño máximo del icono -->
                                 </div>
                                 <div class="col-11 text-start">
                                     <p class="font-smallest fw-semibold mb-0">
@@ -107,17 +106,15 @@
                             <div class="row align-items-start">
                                 <div class="col-lg-7 col-md-7 col-sm-7">
                                     <div class="mb-3">
-                                        <input type="text" id="nombre_cliente" name="nonmbreCliente"
-                                            placeholder="Escribe el código de tu cupón"
-                                            class="form-control  shadow rounded-3 bg-white">
+                                        <input type="text" placeholder="Escribe el código de tu cupón" name="text" class="input form-control">
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-5 col-sm-5 text-start d-flex">
-                                    <a href="../../views/public/carrito_1.html">
+                                    <button class="buttonn">
                                         <img src="../../resources/img/png/enviar_codigo.png" class="img-fluid"
                                             style="max-width: 35px;">
                                         <!-- Ajusta el tamaño máximo del icono -->
-                                    </a>
+                                    </button>
                                 </div>
                             </div>
                         </div>
