--- a/system_huellitas/resources/css/public/productos.css
+++ b/system_huellitas/resources/css/public/productos.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     background-image: url(../../img/png/fondos/huellitas_fondo.png);
     background-color: #FEF6F0;
 }
@@ -8,43 +7,157 @@ a {
     text-decoration: none;
 }
 
-.star{
+.star {
     color: #bbb;
     transition: color 0.3s;
     cursor: pointer;
 }
 
 .star:hover,
-.star.checked{
+.star.checked {
     color: gold;
 }
 
-.estrella_ejemplo{
+.estrella_ejemplo {
     color: gold;
 }
 
-.estrella_ejemplo_apagada{
+.estrella_ejemplo_apagada {
     color: #bbb;
 }
 
-.mensaje_input{
+.mensaje_input {
     border-color: #FCA311;
     background-color: white;
     border-width: 3px;
 }
 
-.comentarios_clientes{
-    border-width: 3px; /* Ancho del borde */
-    border-style: solid; /* Estilo del borde (puede ser solid, dashed, dotted, double, etc.) */
-    border-color: #FCA311; /* Color del borde */
+.comentarios_clientes {
+    border-width: 3px;
+    /* Ancho del borde */
+    border-style: solid;
+    /* Estilo del borde (puede ser solid, dashed, dotted, double, etc.) */
+    border-color: #FCA311;
+    /* Color del borde */
 }
 
 @media (max-width: 429px) {
-.perro{
-    height: 200px;
+    .perro {
+        height: 200px;
+    }
 }
+
+.buttonn {
+    position: relative;
+    padding: 10px 22px;
+    border-radius: 6px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    background-color: #ffffff;
+    transition: all 0.2s ease;
+}
+
+.buttonn:active {
+    transform: scale(0.96);
+}
+
+.buttonn:before,
+.buttonn:after {
+    position: absolute;
+    content: "";
+    width: 150%;
+    left: 50%;
+    height: 100%;
+    transform: translateX(-50%);
+    z-index: -1000;
+    background-repeat: no-repeat;
+}
+
+.buttonn:hover:before {
+    top: -70%;
+    background-image: radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, transparent 20%, rgb(238, 150, 75) 20%, transparent 30%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, transparent 10%, rgb(238, 150, 75) 15%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%);
+    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
+        10% 10%, 18% 18%;
+    background-position: 50% 120%;
+    animation: greentopBubbles 0.6s ease;
+}
+
+@keyframes greentopBubbles {
+    0% {
+        background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%,
+            40% 90%, 55% 90%, 70% 90%;
+    }
+
+    50% {
+        background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%,
+            50% 50%, 65% 20%, 90% 30%;
+    }
+
+    100% {
+        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%,
+            50% 40%, 65% 10%, 90% 20%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
+}
+
+.buttonn:hover::after {
+    bottom: -70%;
+    background-image: radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, transparent 10%, rgb(238, 150, 75) 15%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%),
+        radial-gradient(circle, rgb(238, 150, 75) 20%, transparent 20%);
+    background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
+    background-position: 50% 0%;
+    animation: greenbottomBubbles 0.6s ease;
+}
+
+
+@keyframes greenbottomBubbles {
+    0% {
+        background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%,
+            70% -10%, 70% 0%;
+    }
+
+    50% {
+        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%,
+            105% 0%;
+    }
+
+    100% {
+        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%,
+            110% 10%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
 }
 
 .card:hover {
     transform: scale(0.9, 0.9);
-  }
+}
+
+.input {
+    border-radius: 10px;
+    outline: 2px solid #FEBF00;
+    border: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #fff;
+    outline-offset: 3px;
+    padding: 10px 1rem;
+    transition: 0.25s;
+}
+
+.input:focus {
+    outline-offset: 5px;
+    background-color: #fff
+}
