Ahora se esconde una imagen en tablet

--- a/system_huellitas/resources/css/public/productos.css
+++ b/system_huellitas/resources/css/public/productos.css
@@ -47,6 +47,12 @@ a {
     }
 }
 
+@media (max-width: 768px) {
+    .imgcodigo {
+        visibility: hidden !important;
+    }
+}
+
 .buttonn {
     position: relative;
     padding: 10px 22px;
