--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -91,7 +91,7 @@
                                 <!-- Agrega la clase align-items-center para alinear verticalmente -->
                                 <div class="col-1 text-end d-none d-sm-block d-md-block">
                                     <!-- Utiliza las clases d-none y d-sm-block para ocultar la imagen en pantallas pequeñas -->
-                                    <img src="../../resources/img/png/icono_codigo.png" class="img-fluid">
+                                    <img src="../../resources/img/png/icono_codigo.png" class="imgcodigo img-fluid">
                                 </div>
                                 <div class="col-11 text-start">
                                     <p class="font-smallest fw-semibold mb-0">
