--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -75,15 +75,18 @@
                             </div>
                             <!--Boton para añadir el producto al carrito-->
                             <div class="col-sm-12 col-md-8 col-lg-3 px-2 align-items-start ">
-                                <a href="../public/carrito_1.html"
-                                    class="btn btn-orange-color text-light me-md-5 d-flex align-items-center py-2 btn-small rounded-3">
-                                    <div class="col-auto d-none d-sm-block">
-                                        <img src="../../resources/img/svg/carro_redondo.svg" width="40px">
-                                    </div>
-                                    <div class="col-auto">
-                                        Añadir al carrito
-                                    </div>
-                                </a>
+                                <button class="buton d-flex">
+                                    <a href="../public/carrito_1.html"
+                                        class="btn btn-orange-color text-light me-md-5 d-flex align-items-center py-2 btn-small rounded-3">
+
+                                        <div class="col-auto d-none d-sm-block">
+                                            <img src="../../resources/img/svg/carro_redondo.svg" width="40px">
+                                        </div>
+                                        <div class="col-auto">
+                                            Añadir al carrito
+                                        </div>
+                                    </a>
+                                </button>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-8 col-lg-12 mt-3">
@@ -106,7 +109,8 @@
                             <div class="row align-items-start">
                                 <div class="col-lg-7 col-md-7 col-sm-7">
                                     <div class="mb-3">
-                                        <input type="text" placeholder="Escribe el código de tu cupón" name="text" class="input form-control">
+                                        <input type="text" placeholder="Escribe el código de tu cupón" name="text"
+                                            class="input form-control">
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-5 col-sm-5 text-start d-flex">
