--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-yellow-color">
-    <div class="container p-4">
+    <main class="container p-4">
         <!-- Se centra la row tanto horizontalmente como veticalmente -->
         <div class="row justify-content-center align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5">
@@ -22,7 +22,7 @@
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <!-- Formulario -->
-                <form action="" id="login" name="login">
+                <form id="loginForm">
                     <!-- Row que contiene el icono y el input -->
                     <div class="row align-items-center">
                         <div class="col-auto ">
@@ -51,18 +51,21 @@
                     </div>
                     <!-- Boton para ingresar, d-grid gap-2 toma todo el espacio horizontal de la col-->
                     <div class="d-grid gap-2 mt-5">
-                        <a id="loginButton" type="submit" class="btn btn-orange-color text-light p-2 rounded-3" href="#">Ingresar</a>
-                        <a class="fw-normal text-decoration-none text-dark fs-6 text-center" href="../admin/recuperacion_contra_1.html">¿Has olvidado tú contraseña?</a>
+                        <button id="loginButton" type="submit"
+                            class="btn btn-orange-color text-light p-2 rounded-3">Ingresar</button>
+                        <a class="fw-normal text-decoration-none text-dark fs-6 text-center"
+                            href="../admin/recuperacion_contra_1.html">¿Has olvidado tú contraseña?</a>
                     </div>
                 </form>
             </div>
 
         </div>
-    </div>
-    </div>
-    </div>
+    </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <script type="text/javascript" src="../../controllers/admin/index.js"></script>
 </body>
 
