Las imagenes ya funcionan

--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -107,13 +107,13 @@
                                 <div class="row align-items-center gy-3">
                                     <div class="col-sm-12 col-md-auto">
                                         <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
-                                            width="120px">
+                                            width="120px" height="120px" >
                                     </div>
                                     <div class="col">
                                         <!-- Botón para cargar imagen -->
-                                        <input type="hidden" class="form-control" id="imagenAdmin" name="imagenAdmin">
+                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
                                         <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                        <label class="btn btn-red-color text-light" for="imagenAdmin">Cargar
+                                        <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
                                             imagen</label>
                                     </div>
                                 </div>
